# copydeps

./: .gitignore  CHANGELOG.md  CONTRIBUTE.md  README.md  RELEASE_CHECK_LIST.md  blacklist.sample  copydeps  copydeps.py  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  test_copydeps.py  tox.ini
.github/workflows/: ci.yml
