[metadata]
name = copydeps
# Can't use `attr: copydeps.__version__` here because when packaging with tox
# we can't import copydeps: it fails because dependencies are not installed yet.
# TODO: Split copydeps.py into an __init__.py and a main.py to avoid this.
version = 1.1.0
description = Copy dependencies required by a Linux executable.
long_description = file: README.md
long_description_content_type = text/markdown
author = Genymobile
author_email = opensource@genymobile.com
license = Apache 2.0
platforms = Linux
url = https://github.com/genymobile/copydeps
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux,
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools

[options]
zip_safe = True
py_modules = copydeps
include_package_data = True
install_requires =
    pyelftools

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    copydeps = copydeps:main
